NetBSD Problem Report #44251

From www@NetBSD.org  Sat Dec 18 09:39:55 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 98C9F63B886
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 18 Dec 2010 09:39:55 +0000 (UTC)
Message-Id: <20101218093955.7113C63B883@www.NetBSD.org>
Date: Sat, 18 Dec 2010 09:39:55 +0000 (UTC)
From: pooka@iki.fi
Reply-To: pooka@iki.fi
To: gnats-bugs@NetBSD.org
Subject: RAID1 configuration fails if component 0 has been replaced
X-Send-Pr-Version: www-1.0

>Number:         44251
>Category:       kern
>Synopsis:       RAID1 configuration fails if component 0 has been replaced
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Dec 18 09:40:00 +0000 2010
>Closed-Date:    Fri Jul 29 19:58:48 +0000 2011
>Last-Modified:  Fri Jul 29 20:00:08 +0000 2011
>Originator:     Antti Kantee
>Release:        
>Organization:
>Environment:
>Description:
In case component 1 is replaced from a RAID1, the raid can still be
configured with the component marked as "failed".  However, if
component 0 fails the raid configuration fails completely.

Greg Oster says this is because the label voting code in
rf_CheckLabels() happens to depend on the order of components
and in case the votes are tied the first component examined is
assumed to be correct.
>How-To-Repeat:
run tests/dev/raidframe/t_raid raid1_comp0fail (to be added very soon)
>Fix:

>Release-Note:

>Audit-Trail:
From: "Antti Kantee" <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44251 CVS commit: src/tests/dev/raidframe
Date: Sat, 18 Dec 2010 09:44:42 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Sat Dec 18 09:44:41 UTC 2010

 Modified Files:
 	src/tests/dev/raidframe: t_raid.sh

 Log Message:
 test case for PR kern/44251


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/tests/dev/raidframe/t_raid.sh

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Martin Husemann <martin@duskware.de>
To: Brian Buhrow <buhrow@lothlorien.nfbcal.org>
Cc: spz@netbsd.org, gnats-bugs@netbsd.org,
	oster@cs.usask.ca
Subject: Re: kern/44251 - was: PR Bounties, take 2
Date: Thu, 28 Jul 2011 09:16:44 +0200

 On Wed, Jul 27, 2011 at 01:30:16PM -0700, Brian Buhrow wrote:
 > correct, would cause the test to pass.  Is there a reason these two changes
 > would not be considered a fix?

 I agree with your reasoning and IMHO by the rules that would be a fix.

 Martin




     * To: source-changes%NetBSD.org@localhost
     * Subject: CVS commit: src/sbin/raidctl
     * From: "Brian Buhrow" <buhrow@>
     * Date: Thu, 28 Jul 2011 18:25:22 +0000
     __________________________________________________________________

Module Name:    src
Committed By:   buhrow
Date:           Thu Jul 28 18:25:22 UTC 2011

Modified Files:
        src/sbin/raidctl: raidctl.8

Log Message:
Document the need for zeroing out the first 64 blocks of a replacement
component in a failed RAID set in order to avoid potentially configuring
RAId 1 sets with erroneous values taken from random extent data in the
replacement component partitions.


To generate a diff of this commit:
cvs rdiff -u -r1.61 -r1.62 src/sbin/raidctl/raidctl.8

Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.

     __________________________________________________________________
     __________________________________________________________________

State-Changed-From-To: open->closed
State-Changed-By: oster@NetBSD.org
State-Changed-When: Fri, 29 Jul 2011 19:58:48 +0000
State-Changed-Why:
Fixed.


From: "Greg Oster" <oster@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44251 CVS commit: src/sys/dev/raidframe
Date: Fri, 29 Jul 2011 19:55:51 +0000

 Module Name:	src
 Committed By:	oster
 Date:		Fri Jul 29 19:55:51 UTC 2011

 Modified Files:
 	src/sys/dev/raidframe: rf_disks.c rf_kintf.h rf_netbsdkintf.c

 Log Message:
 In rf_disks.c make sure ser_values and ser_count arrays are
 initialized before use.

 Validate the component label before considering a component for use,
 and make sure we only consider components that are optimal.

 Fixes PR#44251.  All atf RAIDframe tests now pass.


 To generate a diff of this commit:
 cvs rdiff -u -r1.79 -r1.80 src/sys/dev/raidframe/rf_disks.c
 cvs rdiff -u -r1.21 -r1.22 src/sys/dev/raidframe/rf_kintf.h
 cvs rdiff -u -r1.291 -r1.292 src/sys/dev/raidframe/rf_netbsdkintf.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Greg Oster" <oster@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44251 CVS commit: src/tests/dev/raidframe
Date: Fri, 29 Jul 2011 19:57:39 +0000

 Module Name:	src
 Committed By:	oster
 Date:		Fri Jul 29 19:57:38 UTC 2011

 Modified Files:
 	src/tests/dev/raidframe: t_raid.sh

 Log Message:
 Note that PR kern/44251 is fixed.
 Add tests for normal configuration of RAID 1 and RAID 5 sets.


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/tests/dev/raidframe/t_raid.sh

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.