In rf_disks.c make sure ser_values and ser_count arrays are initialized before use.

Validate the component label before considering a component for use,
and make sure we only consider components that are optimal.

Fixes PR#44251.  All atf RAIDframe tests now pass.